feat: Add oauth2 advanced configuration
